ensure that marker display is always visible
git-svn-id: svn://10.222.10.12/src1/avnav@506 981887c0-d8ae-4743-aaa6-7abdade54d40

--- a/avnav_viewer/avnav_viewer.less
+++ b/avnav_viewer/avnav_viewer.less
@@ -108,12 +108,12 @@ font-size: ( @bottomPanelHeight - 2 );
 	width: ( @bottomSmallFont * 7 );
 	.bottomMargins;
 	margin-top: ( @bottomSmallFont / 4 );
-	@media (max-width: 910px) {
+	@media ( max-width: 913px ) {
 		display: none;
 	};
 }
 #leftBottomMarker #leftBottomMarkerEta{
-	width: ( @bottomSmallFont * 5 );
+	width: ( @bottomSmallFont * 5.5 );
 	margin-top: ( @bottomSmallFont / 4 );
 }
 #leftBottomMarker #leftBottomMarkerBearing{
